--- a/strapi3/api/recipe/models/recipe.settings.json
+++ b/strapi3/api/recipe/models/recipe.settings.json
@@ -30,6 +30,11 @@
     },
     "description": {
       "type": "richtext"
+    },
+    "slug": {
+      "type": "string",
+      "required": true,
+      "unique": true
     }
   }
 }
