--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -15,10 +15,13 @@
     "gatsby-source-filesystem": "^4.5.2",
     "gatsby-source-strapi": "^1.0.2",
     "gatsby-transformer-sharp": "^4.5.0",
+    "path-browserify": "^1.0.1",
     "prop-types": "^15.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^8.0.0",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
