--- a/gatsby-strapi4/package.json
+++ b/gatsby-strapi4/package.json
@@ -29,7 +29,7 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby clean && gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby clean &&  gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "gatsby develop",
     "serve": "gatsby serve",
