--- a/gatsby-strapi4/package.json
+++ b/gatsby-strapi4/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.5.4",
     "gatsby-plugin-gatsby-cloud": "^4.5.2",
     "gatsby-plugin-image": "^2.5.2",
@@ -15,8 +16,10 @@
     "gatsby-source-filesystem": "^4.5.2",
     "gatsby-source-strapi": "^1.0.2",
     "gatsby-transformer-sharp": "^4.5.0",
+    "multiselect-react-dropdown": "^2.0.17",
     "prop-types": "^15.8.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
