--- a/gatsby-strapi4/package.json
+++ b/gatsby-strapi4/package.json
@@ -18,10 +18,11 @@
     "gatsby-transformer-sharp": "^4.5.0",
     "multiselect-react-dropdown": "^2.0.17",
     "prop-types": "^15.8.0",
+    "reach-router": "0.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
   },
   "devDependencies": {
     "prettier": "^2.5.1"
