--- a/gatsby-strapi4/package.json
+++ b/gatsby-strapi4/package.json
@@ -22,7 +22,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "^2.5.1"
